# HealHUbDesktopApp

./: .gitattributes  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MEDICINE_PRESCRIPTION_SETUP.md  PRESCRIPTION_QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md
HealHubDesktopDashboard/: README.md  index.html  package-lock.json  package.json
HealHubDesktopDashboard/src/: main.ts  style.css
HealHubDesktopDashboard/src-tauri/: tauri.conf.json
HealHubMobileApp/: App.tsx  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
HealHubMobileApp/components/: IntroSlides.tsx  LanguageSelector.tsx  MainApp.styles.ts  MainApp.tsx  (+1 more)
Model/: skin-disease-prediction.ipynb
hospital-dashboard/: package-lock.json  package.json
hospital-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
hospital-dashboard/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
hospital-dashboard/src-tauri/src/commands/: admin_commands.rs  auth_commands.rs  doctor_commands.rs  mod.rs
hospital-dashboard/src-tauri/src/entities/: appointment.rs  clinic.rs  doctor.rs  history.rs  medication.rs  mod.rs  patient.rs  report.rs  user.rs
hospital-dashboard/src-tauri/src/repositories/: appointments_repo.rs  clinic_repo.rs  doctors_repo.rs  history_repo.rs  medications_repo.rs  mod.rs  patients_repo.rs  reports_repo.rs  supabase.rs  users_repo.rs
hospital-dashboard/src-tauri/src/services/: admin_service.rs  auth_service.rs  clinic_date.rs  doctor_service.rs  email_service.rs  mod.rs
hospital-mobile-backend/: .gitignore  package-lock.json  requirements.txt  run.py  test_api.py  test_skin_api.py
(+728 files in other folders)
