[package]
name = "hospital-dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hospital_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls", "rustls-tls", "builder"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
# Workaround for MSVC linker errors like `LNK1318: Unexpected PDB error`.
# Incremental compilation can leave/lock corrupted PDB state on Windows.
incremental = false
# Also disable debug info in dev to avoid generating/merging PDBs via `link.exe`.
debug = 0

